helloworld-project/task_day7/deploy_files/nexus.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-ns
  labels:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/part-of: nexus

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "100m"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: nexus-claim

---

apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus-ns
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
#      prometheus.io/port:   '8081'
spec:
  selector:
    app: nexus-server
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000
